    * added option to detach tabs from window
    * added delete action in edit context menu on page
    * added possibility to remove EasyList from AdBlock
    * added inline domain completion to urlbar
    * added KWallet password backend plugin
    * added Gnome-Keyring password backend plugin
    * added StatusBar Icons plugin that adds extra icons to statusbar
    * themes can now be loaded from profile directories
    * pagescreen can now save output into number of formats, including PDF
    * proxy exceptions now supports wildcards (*, ?)
    * cancel upload when trying to upload non-readable files
    * GreaseMonkey: added icon in statusbar
    * GreaseMonkey: added support for GM_Settings
    * GreaseMonkey: fixed userscripts when first loading plugin
    * GreaseMonkey: run userscripts in all frames on page
    * oxygen: set rounded corners for tooltips
    * oxygen: workaround for transparent background of tooltips
    * X11: Set correct WM_CLASS property to windows
    * fixed: size of preferences dialog on low-res screens
    * fixed: loading plugins with relative paths in portable build
    * fixed: displaying a lot of RSS feeds in RSS widget in locationbar

Version 1.4.4
    * released 1 September 2013
    * added ctrl/shift + insert shortcuts to copy/paste in webview
    * don't try to download empty page
    * reverted forcing SSLv3 protocol for secured connections
    * duckduckgo.com is now default search engine
    * fixed: correct height of icons widget in SiteInfo
    * fixed: hide tabbar with only one tab option now works in fullscreen
    * fixed: crash with Oxygen theme when closing windows with tabs on top
    * fixed: saving IgnoreAllSSLWarnings option from SSLManager
    * fixed: crash on saving settings with unavailable theme
    * fixed: Accept-Language header now works with all sites
    * fixed: using external download manager with use defined location setting
    * GreaseMonkey: fixed buttons in script list with RTL layout