@@ -9,6 +9,7 @@ Version 1.5.0
     * added KWallet password backend plugin
     * added Gnome-Keyring password backend plugin
     * added StatusBar Icons plugin that adds extra icons to statusbar
+    * great performance improvement for matching basic rules in AdBlock
     * themes can now be loaded from profile directories
     * pagescreen can now save output into number of formats, including PDF
     * proxy exceptions now supports wildcards (*, ?)
@@ -23,6 +24,7 @@ Version 1.5.0
     * fixed: size of preferences dialog on low-res screens
     * fixed: loading plugins with relative paths in portable build
     * fixed: displaying a lot of RSS feeds in RSS widget in locationbar
+    * fixed: enabling disabled rules in AdBlock now works everytime
 
 Version 1.4.4
     * released 1 September 2013
